--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 asgiref==3.2.10
 Django==3.0.8
+django-sendgrid-v5==0.8.1
+future==0.18.2
+python-http-client==3.2.7
 pytz==2020.1
+sendgrid==6.4.1
 sqlparse==0.3.1
+starkbank-ecdsa==1.0.0
