--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.10
 Django==3.0.8
+django-environ==0.4.5
 django-sendgrid-v5==0.8.1
 future==0.18.2
 python-http-client==3.2.7
@@ -7,3 +8,4 @@ pytz==2020.1
 sendgrid==6.4.1
 sqlparse==0.3.1
 starkbank-ecdsa==1.0.0
+whitenoise==5.1.0
