--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Django==3.0.8
 django-environ==0.4.5
 django-sendgrid-v5==0.8.1
 future==0.18.2
+python-dotenv==0.14.0
 python-http-client==3.2.7
 pytz==2020.1
 sendgrid==6.4.1
